--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
     "name": "@yaireo/tagify",
-    "version": "2.31.2",
+    "version": "2.31.3",
     "homepage": "https://github.com/yairEO/tagify",
     "description": "lightweight, efficient Tags input component in Vanilla JS / React / Angular [super customizable, tiny size & top performance]",
+    "license" : "MIT",
     "_npmUser": {
         "name": "vsync",
         "email": "vsync.design@gmail.com"
