--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "email": "vsync.design@gmail.com"
     },
     "scripts": {
+        "start": "gulp",
         "test": "jest"
     },
     "jest": {
