--- a/.gitignore
+++ b/.gitignore
@@ -52,6 +52,7 @@ Temporary Items
 /test2.html
 /package-lock.json
 /react
+/test
 /react-demo.html
 .idea
 /.vscode/bookmarks.json
@@ -61,3 +62,4 @@ Temporary Items
 /logo.psd
 /test/_temp.html
 /test/test-1.html
+/test
