--- a/package.json
+++ b/package.json
@@ -28,14 +28,14 @@
         "url": "https://github.com/yaireo/tagify/issues"
     },
     "peerDependencies": {
-      "react": "*",
-      "react-dom": "*"
+        "react": "*",
+        "react-dom": "*"
     },
     "devDependencies": {
         "@babel/core": "^7.5.5",
-        "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
-        "@babel/plugin-transform-destructuring": "^7.5.0",
-        "@babel/preset-env": "^7.5.5",
+        "@babel/plugin-proposal-object-rest-spread": "^7.9.6",
+        "@babel/plugin-transform-destructuring": "^7.9.5",
+        "@babel/preset-env": "^7.9.6",
         "@babel/preset-react": "^7.9.4",
         "babel-core": "^6.26.3",
         "beepbeep": "^1.2.2",
@@ -44,19 +44,20 @@
         "gulp-babel": "^8.0.0",
         "gulp-bump": "^3.1.3",
         "gulp-cached": "^1.1.1",
-        "gulp-clean-css": "^4.2.0",
+        "gulp-clean-css": "^4.3.0",
         "gulp-combine-mq": "^0.4.0",
         "gulp-concat": "^2.6.1",
         "gulp-css-globbing": "^0.2.2",
         "gulp-eslint": "^6.0.0",
         "gulp-filter": "^6.0.0",
-        "gulp-git": "^2.9.0",
+        "gulp-git": "^2.10.1",
         "gulp-insert": "^0.5.0",
         "gulp-load-plugins": "^2.0.1",
         "gulp-rename": "^1.4.0",
         "gulp-replace": "^1.0.0",
-        "gulp-sass": "^4.0.2",
+        "gulp-sass": "^4.1.0",
         "gulp-sourcemaps": "^2.6.5",
+        "gulp-streamify": "^1.0.2",
         "gulp-tag-version": "^1.3.1",
         "gulp-tap": "^2.0.0",
         "gulp-uglify": "^3.0.2",
@@ -67,7 +68,9 @@
         "jest-puppeteer": "^4.3.0",
         "path": "^0.12.7",
         "puppeteer": "^1.20.0",
+        "rollup-stream": "^1.24.1",
         "run-sequence": "^2.2.1",
-        "semver": "^6.3.0"
+        "semver": "^7.3.2",
+        "vinyl-source-stream": "^2.0.0"
     }
 }
