added a server script for testing in browserstack

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     },
     "scripts": {
         "start": "",
-        "test": "jest"
+        "test": "jest",
+        "serve": "http-server -o -c-1"
     },
     "jest": {
         "preset": "jest-puppeteer"
