--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@yaireo/tagify",
-    "version": "3.13.1",
+    "version": "3.14.0",
     "homepage": "https://github.com/yairEO/tagify",
     "description": "lightweight, efficient Tags input component in Vanilla JS / React / Angular [super customizable, tiny size & top performance]",
     "license": "MIT",
@@ -29,8 +29,9 @@
         "url": "https://github.com/yaireo/tagify/issues"
     },
     "peerDependencies": {
-        "react": "*",
-        "react-dom": "*"
+        "react": "^16.8.0",
+        "react-dom": "^16.8.0",
+        "prop-types": "*"
     },
     "devDependencies": {
         "@babel/core": "^7.5.5",
