--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
         "email": "vsync.design@gmail.com"
     },
     "scripts": {
-        "start": "",
+        "start": "npx gulp@3.9.1",
         "test": "jest",
-        "serve": "http-server -o -c-1"
+        "serve": "npx http-server -o index.html -c-1"
     },
     "jest": {
         "preset": "jest-puppeteer"
@@ -28,20 +28,16 @@
     "bugs": {
         "url": "https://github.com/yaireo/tagify/issues"
     },
-    "peerDependencies": {
-        "react": "^16.8.0",
-        "react-dom": "^16.8.0",
-        "prop-types": "*"
-    },
     "devDependencies": {
         "@babel/core": "^7.5.5",
         "@babel/plugin-proposal-object-rest-spread": "^7.9.6",
         "@babel/plugin-transform-destructuring": "^7.9.5",
         "@babel/preset-env": "^7.9.6",
         "@babel/preset-react": "^7.9.4",
-        "babel-core": "^6.26.3",
+        "@rollup/plugin-babel": "^5.1.0",
+        "@rollup/stream": "git+https://github.com/andremacola/stream.git",
         "beepbeep": "^1.2.2",
-        "gulp": "^3.9.1",
+        "gulp": "^4.0.2",
         "gulp-autoprefixer": "7.0.1",
         "gulp-babel": "^8.0.0",
         "gulp-bump": "^3.1.3",
@@ -66,11 +62,12 @@
         "gulp-umd": "^2.0.0",
         "gulp-util": "^3.0.8",
         "gulp-watch": "^5.0.1",
-        "jest": "^24.9.0",
-        "jest-puppeteer": "^4.3.0",
         "path": "^0.12.7",
         "puppeteer": "^1.20.0",
-        "rollup-stream": "^1.24.1",
+        "rollup": "^2.22.1",
+        "rollup-plugin-banner": "^0.2.1",
+        "rollup-plugin-terser": "^6.1.0",
+        "rollup-plugin-uglify": "^6.0.4",
         "run-sequence": "^2.2.1",
         "semver": "^7.3.2",
         "vinyl-source-stream": "^2.0.0"
