fixes #653 - if tag is last child, caret jumps to far-right

--- a/package.json
+++ b/package.json
@@ -3,7 +3,13 @@
     "version": "3.18.1",
     "homepage": "https://github.com/yairEO/tagify",
     "description": "lightweight, efficient Tags input component in Vanilla JS / React / Angular [super customizable, tiny size & top performance]",
-    "keywords": ["tags", "tagging", "component", "tag", "ui"],
+    "keywords": [
+        "tags",
+        "tagging",
+        "component",
+        "tag",
+        "ui"
+    ],
     "license": "MIT",
     "_npmUser": {
         "name": "vsync",
