-fixed the "extend" method - was not cloning Arrays but copying the same instance. - fixed "toggleClass" method for "undefined" argument being added as class name - deleted "npmignore" file and replaced with "files" property inside "package.json", which is cleaer - added "prop-types" package as peer dependency which is needed for the React wrapper

--- a/package.json
+++ b/package.json
@@ -44,6 +44,13 @@
     "bugs": {
         "url": "https://github.com/yaireo/tagify/issues"
     },
+    "files": [
+        "/dist",
+        "/src/tagify.scss"
+    ],
+    "peerDependencies": {
+        "prop-types": "^15.7.2"
+    },
     "devDependencies": {
         "@babel/core": "^7.5.5",
         "@babel/plugin-proposal-object-rest-spread": "^7.9.6",
