--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     },
     "scripts": {
         "start": "npx gulp@4.0.2",
-        "prepublishOnly": "npm run gulp build && git add . && git commit -am '[BUILD]' && pkg-ok",
+        "prepublishOnly": "gulp build && git add . && git commit -am '[BUILD]' && pkg-ok",
         "test": "echo \"No test specified\"",
         "serve": "npx http-server -o index.html -c-1",
         "push": "git push origin",
