--- a/package.json
+++ b/package.json
@@ -31,9 +31,7 @@
         "start": "npx gulp@4.0.2",
         "prepublishOnly": "gulp build && git add . && git commit -am '[BUILD]' && pkg-ok",
         "test": "echo \"No test specified\"",
-        "serve": "npx http-server -o index.html -c-1",
-        "push": "git push origin",
-        "push:tags": "git push origin --tags"
+        "serve": "npx http-server -o index.html -c-1"
     },
     "jest": {
         "preset": "jest-puppeteer"
