--- a/package.json
+++ b/package.json
@@ -56,18 +56,18 @@
         "prop-types": "^15.7.2"
     },
     "devDependencies": {
-        "@babel/core": "^7.5.5",
-        "@babel/plugin-proposal-object-rest-spread": "^7.9.6",
-        "@babel/plugin-transform-destructuring": "^7.9.5",
-        "@babel/preset-env": "^7.9.6",
-        "@babel/preset-react": "^7.9.4",
-        "@rollup/plugin-babel": "^5.1.0",
+        "@babel/core": "^7.13.1",
+        "@babel/plugin-proposal-object-rest-spread": "^7.13.0",
+        "@babel/plugin-transform-destructuring": "^7.13.0",
+        "@babel/preset-env": "^7.13.5",
+        "@babel/preset-react": "^7.12.13",
+        "@rollup/plugin-babel": "^5.3.0",
         "@rollup/stream": "git+https://github.com/andremacola/stream.git",
-        "beepbeep": "^1.2.2",
+        "beepbeep": "^1.3.0",
         "gulp": "^4.0.2",
         "gulp-autoprefixer": "7.0.1",
         "gulp-babel": "^8.0.0",
-        "gulp-bump": "^3.1.3",
+        "gulp-bump": "^3.2.0",
         "gulp-cached": "^1.1.1",
         "gulp-clean-css": "^4.3.0",
         "gulp-combine-mq": "^0.4.0",
@@ -76,28 +76,28 @@
         "gulp-eslint": "^6.0.0",
         "gulp-filter": "^6.0.0",
         "gulp-git": "^2.10.1",
-        "gulp-header-comment": "^0.8.0",
+        "gulp-header-comment": "^0.9.0",
         "gulp-insert": "^0.5.0",
-        "gulp-load-plugins": "^2.0.1",
-        "gulp-rename": "^1.4.0",
+        "gulp-load-plugins": "^2.0.6",
+        "gulp-rename": "^2.0.0",
         "gulp-replace": "^1.0.0",
         "gulp-sass": "^4.1.0",
-        "gulp-sourcemaps": "^2.6.5",
+        "gulp-sourcemaps": "^3.0.0",
         "gulp-streamify": "^1.0.2",
         "gulp-tag-version": "^1.3.1",
         "gulp-tap": "^2.0.0",
-        "gulp-uglify": "^3.0.2",
+        "gulp-terser": "^2.0.1",
         "gulp-umd": "^2.0.0",
         "gulp-util": "^3.0.8",
         "gulp-watch": "^5.0.1",
         "path": "^0.12.7",
-        "puppeteer": "^1.20.0",
-        "rollup": "^2.22.1",
+        "puppeteer": "^7.1.0",
+        "rollup": "^2.39.1",
         "rollup-plugin-banner": "^0.2.1",
-        "rollup-plugin-terser": "^6.1.0",
+        "rollup-plugin-terser": "^7.0.2",
         "rollup-plugin-uglify": "^6.0.4",
         "run-sequence": "^2.2.1",
-        "semver": "^7.3.2",
+        "semver": "^7.3.4",
         "vinyl-source-stream": "^2.0.0"
     }
 }
