--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
         "yolo": true
     },
     "scripts": {
-        "start": "npx gulp@4.0.2",
+        "start": "gulp --dev",
         "_prepublishOnly": "gulp build && git add . && git commit -am '[BUILD]' && pkg-ok",
         "test": "echo \"No test specified\"",
         "serve": "npx http-server -o index.html -c-1"
@@ -87,11 +87,9 @@
         "gulp-util": "^3.0.8",
         "gulp-watch": "^5.0.1",
         "path": "^0.12.7",
-        "puppeteer": "^7.1.0",
         "rollup": "^2.39.1",
         "rollup-plugin-banner": "^0.2.1",
         "rollup-plugin-terser": "^7.0.2",
-        "rollup-plugin-uglify": "^6.0.4",
         "run-sequence": "^2.2.1",
         "semver": "^7.3.4",
         "vinyl-source-stream": "^2.0.0"
