--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "scripts": {
         "start": "gulp --dev",
         "build": "gulp",
-        "_prepublishOnly": "gulp build && git add . && git commit -am '[BUILD]' && pkg-ok",
+        "version": "gulp build && git add .",
+        "prepublishOnly": "pkg-ok",
         "test": "echo \"No test specified\"",
         "serve": "npx http-server -o index.html -c-1"
     },
