--- a/package.json
+++ b/package.json
@@ -53,16 +53,16 @@
         "prop-types": "^15.7.2"
     },
     "devDependencies": {
-        "@babel/core": "^7.13.15",
-        "@babel/plugin-proposal-object-rest-spread": "^7.13.8",
-        "@babel/plugin-transform-destructuring": "^7.13.0",
-        "@babel/preset-env": "^7.13.15",
-        "@babel/preset-react": "^7.13.13",
+        "@babel/core": "^7.15.5",
+        "@babel/plugin-proposal-object-rest-spread": "^7.14.7",
+        "@babel/plugin-transform-destructuring": "^7.14.7",
+        "@babel/preset-env": "^7.15.4",
+        "@babel/preset-react": "^7.14.5",
         "@rollup/plugin-babel": "^5.3.0",
         "@rollup/stream": "git+https://github.com/andremacola/stream.git",
         "beepbeep": "^1.3.0",
         "gulp": "^4.0.2",
-        "gulp-autoprefixer": "8.0.0",
+        "gulp-autoprefixer": "^8.0.0",
         "gulp-babel": "^8.0.0",
         "gulp-bump": "^3.2.0",
         "gulp-cached": "^1.1.1",
@@ -73,10 +73,10 @@
         "gulp-eslint": "^6.0.0",
         "gulp-header-comment": "^0.9.0",
         "gulp-insert": "^0.5.0",
-        "gulp-load-plugins": "^2.0.6",
+        "gulp-load-plugins": "^2.0.7",
         "gulp-rename": "^2.0.0",
-        "gulp-replace": "^1.0.0",
-        "gulp-sass": "^4.1.0",
+        "gulp-replace": "^1.1.3",
+        "gulp-sass": "^5.0.0",
         "gulp-sourcemaps": "^3.0.0",
         "gulp-streamify": "^1.0.2",
         "gulp-tag-version": "^1.3.1",
@@ -86,10 +86,11 @@
         "gulp-util": "^3.0.8",
         "gulp-watch": "^5.0.1",
         "path": "^0.12.7",
-        "rollup": "^2.52.2",
+        "rollup": "^2.56.3",
         "rollup-plugin-banner": "^0.2.1",
         "rollup-plugin-terser": "^7.0.2",
         "run-sequence": "^2.2.1",
+        "sass": "^1.39.0",
         "semver": "^7.3.5",
         "vinyl-source-stream": "^2.0.0"
     }
