--- a/package.json
+++ b/package.json
@@ -85,8 +85,9 @@
         "gulp-watch": "^5.0.1",
         "path": "^0.12.7",
         "rollup": "^2.75.5",
-        "rollup-plugin-banner": "^0.2.1",
+        "rollup-plugin-banner2": "^1.2.2",
         "rollup-plugin-terser": "^7.0.2",
+        "vinyl-buffer": "^1.0.1",
         "run-sequence": "^2.2.1",
         "sass": "^1.39.0",
         "semver": "^7.3.8",
