--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
         "not op_mini all"
     ],
     "engines": {
-        "npm": ">=8.0.0",
-        "node": ">=14.20.0"
+        "npm": ">=9.0.0",
+        "node": ">=16.15.0"
     },
     "np": {
         "yarn": false,
@@ -48,21 +48,15 @@
     },
     "files": [
         "/dist",
-        "/src/tagify.scss"
+        "/src"
     ],
-    "peerDependencies": {
-        "prop-types": "^15.7.2"
-    },
     "devDependencies": {
-        "@babel/core": "^7.20.5",
-        "@babel/preset-env": "^7.20.2",
-        "@babel/preset-react": "^7.18.6",
-        "@rollup/plugin-babel": "^6.0.3",
-        "@rollup/stream": "git+https://github.com/andremacola/stream.git",
+        "@rollup/plugin-terser": "^0.4.4",
+        "@rollup/stream": "^3.0.1",
+        "@swc/core": "^1.4.12",
         "beepbeep": "^1.3.0",
-        "gulp": "^4.0.2",
+        "gulp": "^5.0.0",
         "gulp-autoprefixer": "^8.0.0",
-        "gulp-babel": "^8.0.0",
         "gulp-bump": "^3.2.0",
         "gulp-cached": "^1.1.1",
         "gulp-clean-css": "^4.3.0",
@@ -77,6 +71,7 @@
         "gulp-sass": "^5.1.0",
         "gulp-sourcemaps": "^3.0.0",
         "gulp-streamify": "^1.0.2",
+        "gulp-swc": "^2.0.0",
         "gulp-tag-version": "^1.3.1",
         "gulp-tap": "^2.0.0",
         "gulp-terser": "^2.1.0",
@@ -84,9 +79,9 @@
         "gulp-util": "^3.0.8",
         "gulp-watch": "^5.0.1",
         "path": "^0.12.7",
-        "rollup": "^2.79.1",
+        "rollup": "2.79.1",
         "rollup-plugin-banner2": "^1.2.2",
-        "rollup-plugin-terser": "^7.0.2",
+        "rollup-plugin-swc3": "^0.11.0",
         "run-sequence": "^2.2.1",
         "sass": "^1.56.1",
         "semver": "^7.3.8",
