--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
         "./react": "./src/react.tagify",
         "./react.tagify": "./src/react.tagify",
         "./dist/react.tagify": "./src/react.tagify",
-        "./dist/react.tagify.jsx": "./src/react.tagify.jsx"
+        "./dist/react.tagify.jsx": "./src/react.tagify.jsx",
+        "./dist/tagify.min.js": "./dist/tagify.js",
+        "./dist/tagify.min": "./dist/tagify.js"
     },
     "repository": {
         "type": "git",
