Added files from the `dist` folder to the `exports` property in `package.json`. Seems like recent addition of the `exports` property had caused issues for some users when trying to import the CSS file which was not included in the `exports` and so I've added all the files, just in case

--- a/package.json
+++ b/package.json
@@ -50,6 +50,9 @@
         "./dist/react.tagify.jsx": "./src/react.tagify.jsx",
         "./dist/tagify.min.js": "./dist/tagify.js",
         "./dist/tagify.min": "./dist/tagify.js",
+        "./dist/tagify.esm.js": "./dist/tagify.esm.js",
+        "./dist/tagify.polyfills.min.js": "./dist/tagify.polyfills.min.js",
+        "./dist/tagify.vue": "./dist/tagify.vue",
         "./dist/tagify.css": "./dist/tagify.css"
     },
     "repository": {
