--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
         "gulp-header-comment": "^0.10.0",
         "gulp-insert": "^0.5.0",
         "gulp-load-plugins": "^2.0.8",
+        "gulp-nunjucks": "^6.0.0",
         "gulp-rename": "^2.0.0",
         "gulp-replace": "^1.1.3",
         "gulp-sass": "^5.1.0",
