Fixed package.json main attribute after .min file removal
This is an important fix as since 4.24.0 the "main" attribute is broken and causes issues when including tagify in some build processes

@yairEO Could you make a release to include this fix?

--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
         "preset": "jest-puppeteer"
     },
     "author": "Yair Even-Or <vsync.design@gmail.com>",
-    "main": "./dist/tagify.min.js",
+    "main": "./dist/tagify.js",
     "exports": {
         ".": {
             "import": "./dist/tagify.esm.js",
