--- a/package.json
+++ b/package.json
@@ -1,113 +1,115 @@
 {
-    "name": "@yaireo/tagify",
-    "version": "4.26.1",
-    "homepage": "https://github.com/yairEO/tagify",
-    "description": "lightweight, efficient Tags input component in Vanilla JS / React / Angular [super customizable, tiny size & top performance]",
-    "keywords": [
-        "tags",
-        "tagging",
-        "component",
-        "tag",
-        "ui"
-    ],
-    "license": "MIT",
-    "browserslist": [
-        ">1%",
-        "not dead",
-        "not ie < 11",
-        "not IE_Mob 11",
-        "not op_mini all"
-    ],
-    "engines": {
-        "npm": ">=9.0.0",
-        "node": ">=16.15.0"
+  "name": "@yaireo/tagify",
+  "version": "4.26.1",
+  "homepage": "https://github.com/yairEO/tagify",
+  "description": "lightweight, efficient Tags input component in Vanilla JS / React / Angular [super customizable, tiny size & top performance]",
+  "keywords": [
+    "tags",
+    "tagging",
+    "component",
+    "tag",
+    "ui"
+  ],
+  "license": "MIT",
+  "browserslist": [
+    ">1%",
+    "not dead",
+    "not ie < 11",
+    "not IE_Mob 11",
+    "not op_mini all"
+  ],
+  "engines": {
+    "npm": ">=9.0.0",
+    "node": ">=16.15.0"
+  },
+  "np": {
+    "yarn": false,
+    "yolo": true
+  },
+  "scripts": {
+    "start": "gulp --dev",
+    "build": "gulp",
+    "version": "gulp build && git add .",
+    "prepublishOnly": "pjv",
+    "test": "echo \"No test specified\"",
+    "serve": "npx http-server -o index.html -c-1"
+  },
+  "jest": {
+    "preset": "jest-puppeteer"
+  },
+  "author": "Yair Even-Or <vsync.design@gmail.com>",
+  "main": "./dist/tagify.js",
+  "exports": {
+    ".": {
+      "import": "./dist/tagify.esm.js",
+      "require": "./dist/tagify.js"
     },
-    "np": {
-        "yarn": false,
-        "yolo": true
-    },
-    "scripts": {
-        "start": "gulp --dev",
-        "build": "gulp",
-        "version": "gulp build && git add .",
-        "prepublishOnly": "pjv",
-        "test": "echo \"No test specified\"",
-        "serve": "npx http-server -o index.html -c-1"
-    },
-    "jest": {
-        "preset": "jest-puppeteer"
-    },
-    "author": "Yair Even-Or <vsync.design@gmail.com>",
-    "main": "./dist/tagify.js",
-    "exports": {
-        ".": {
-            "import": "./dist/tagify.esm.js",
-            "require": "./dist/tagify.js"
-        },
-        "./react": "./src/react.tagify",
-        "./react.tagify": "./src/react.tagify",
-        "./dist/react.tagify": "./src/react.tagify",
-        "./dist/react.tagify.jsx": "./src/react.tagify.jsx",
-        "./dist/tagify.min.js": "./dist/tagify.js",
-        "./dist/tagify.min": "./dist/tagify.js",
-        "./dist/tagify.esm.js": "./dist/tagify.esm.js",
-        "./dist/tagify.polyfills.min.js": "./dist/tagify.polyfills.min.js",
-        "./dist/tagify.vue": "./dist/tagify.vue",
-        "./dist/tagify.css": "./dist/tagify.css"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/yairEO/tagify.git"
-    },
-    "bugs": {
-        "url": "https://github.com/yaireo/tagify/issues"
-    },
-    "files": [
-        "/dist",
-        "/src"
-    ],
-    "peerDependencies": {
-        "prop-types": ">15.5.7",
-        "react": "*",
-        "react-dom": "*"
-    },
-    "devDependencies": {
-        "@rollup/plugin-terser": "^0.4.4",
-        "@rollup/stream": "^3.0.1",
-        "@swc/core": "^1.4.12",
-        "beepbeep": "^1.3.0",
-        "gulp": "^5.0.0",
-        "gulp-autoprefixer": "^8.0.0",
-        "gulp-bump": "^3.2.0",
-        "gulp-cached": "^1.1.1",
-        "gulp-clean-css": "^4.3.0",
-        "gulp-combine-mq": "^0.4.0",
-        "gulp-concat": "^2.6.1",
-        "gulp-css-globbing": "^0.2.2",
-        "gulp-header-comment": "^0.10.0",
-        "gulp-insert": "^0.5.0",
-        "gulp-load-plugins": "^2.0.8",
-        "gulp-nunjucks": "^6.0.0",
-        "gulp-rename": "^2.0.0",
-        "gulp-replace": "^1.1.3",
-        "gulp-sass": "^5.1.0",
-        "gulp-sourcemaps": "^3.0.0",
-        "gulp-streamify": "^1.0.2",
-        "gulp-swc": "^2.0.0",
-        "gulp-tag-version": "^1.3.1",
-        "gulp-tap": "^2.0.0",
-        "gulp-terser": "^2.1.0",
-        "gulp-umd": "^2.0.0",
-        "gulp-util": "^3.0.8",
-        "gulp-watch": "^5.0.1",
-        "path": "^0.12.7",
-        "rollup": "2.79.1",
-        "rollup-plugin-banner2": "^1.2.2",
-        "rollup-plugin-swc3": "^0.11.0",
-        "run-sequence": "^2.2.1",
-        "sass": "^1.56.1",
-        "semver": "^7.3.8",
-        "vinyl-buffer": "^1.0.1",
-        "vinyl-source-stream": "^2.0.0"
-    }
+    "./react": "./src/react.tagify",
+    "./react.tagify": "./src/react.tagify",
+    "./dist/react.tagify": "./src/react.tagify",
+    "./dist/react.tagify.jsx": "./src/react.tagify.jsx",
+    "./dist/tagify.min.js": "./dist/tagify.js",
+    "./dist/tagify.min": "./dist/tagify.js",
+    "./dist/tagify.esm.js": "./dist/tagify.esm.js",
+    "./dist/tagify.polyfills.min.js": "./dist/tagify.polyfills.min.js",
+    "./dist/tagify.vue": "./dist/tagify.vue",
+    "./dist/tagify.css": "./dist/tagify.css"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/yairEO/tagify.git"
+  },
+  "bugs": {
+    "url": "https://github.com/yaireo/tagify/issues"
+  },
+  "files": [
+    "/dist",
+    "/src"
+  ],
+  "peerDependencies": {
+    "prop-types": ">15.5.7",
+    "react": "*",
+    "react-dom": "*"
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.43.1",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/stream": "^3.0.1",
+    "@swc/core": "^1.4.12",
+    "@types/node": "^20.12.8",
+    "beepbeep": "^1.3.0",
+    "gulp": "^5.0.0",
+    "gulp-autoprefixer": "^8.0.0",
+    "gulp-bump": "^3.2.0",
+    "gulp-cached": "^1.1.1",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-combine-mq": "^0.4.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-css-globbing": "^0.2.2",
+    "gulp-header-comment": "^0.10.0",
+    "gulp-insert": "^0.5.0",
+    "gulp-load-plugins": "^2.0.8",
+    "gulp-nunjucks": "^6.0.0",
+    "gulp-rename": "^2.0.0",
+    "gulp-replace": "^1.1.3",
+    "gulp-sass": "^5.1.0",
+    "gulp-sourcemaps": "^3.0.0",
+    "gulp-streamify": "^1.0.2",
+    "gulp-swc": "^2.0.0",
+    "gulp-tag-version": "^1.3.1",
+    "gulp-tap": "^2.0.0",
+    "gulp-terser": "^2.1.0",
+    "gulp-umd": "^2.0.0",
+    "gulp-util": "^3.0.8",
+    "gulp-watch": "^5.0.1",
+    "path": "^0.12.7",
+    "rollup": "2.79.1",
+    "rollup-plugin-banner2": "^1.2.2",
+    "rollup-plugin-swc3": "^0.11.0",
+    "run-sequence": "^2.2.1",
+    "sass": "^1.56.1",
+    "semver": "^7.3.8",
+    "vinyl-buffer": "^1.0.1",
+    "vinyl-source-stream": "^2.0.0"
+  }
 }
