--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,7 @@ Temporary Items
 /logo.psd
 /test/_temp.html
 /test/test-1.html
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
