--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "build": "gulp",
     "version": "gulp build && git add .",
     "prepublishOnly": "pjv",
-    "test": "echo \"No test specified\"",
+    "test": "pnpm exec playwright test",
     "serve": "npx http-server -o index.html -c-1"
   },
   "jest": {
