--- a/package.json
+++ b/package.json
@@ -46,8 +46,8 @@
     },
     "./react": "./src/react.tagify",
     "./react.tagify": "./src/react.tagify",
-    "./dist/react.tagify": "./src/react.tagify",
-    "./dist/react.tagify.jsx": "./src/react.tagify.jsx",
+    "./dist/react.tagify": "./dist/react.tagify.jsx",
+    "./dist/react.tagify.jsx": "./dist/react.tagify.jsx",
     "./dist/tagify.min.js": "./dist/tagify.js",
     "./dist/tagify.min": "./dist/tagify.js",
     "./dist/tagify.esm.js": "./dist/tagify.esm.js",
