fixes #1435 - added `/src/tagify.scss` file to the "exports" property in `package.json` file

--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "./dist/tagify.polyfills.min.js": "./dist/tagify.polyfills.min.js",
     "./dist/tagify.vue": "./dist/tagify.vue",
     "./vue": "./dist/tagify.vue",
-    "./dist/tagify.css": "./dist/tagify.css"
+    "./dist/tagify.css": "./dist/tagify.css",
+    "./src/tagify.scss": "./src/tagify.scss"
   },
   "repository": {
     "type": "git",
